fix: show TOC on mobile by default, remove toggle
TOC is always visible regardless of screen size. Removed the toggle
button, its JS handler, and all related CSS.

--- a/_sass/klise/_dark.scss
+++ b/_sass/klise/_dark.scss
@@ -81,10 +81,6 @@ body[data-theme="dark"] {
     color: $dark-gray;
   }
 
-  .toc-toggle {
-    color: $dark-gray;
-  }
-
   .toc-item a {
     color: $dark-gray;
 
